# titanx-bot

./: .gitattributes  .replit  Dockerfile  README.md  backup_db_20260616.json  main.py  pyproject.toml  ziews84U
.agents/memory/: MEMORY.md  agent-foundation-v16.md  ai-foundation-recovery.md  ai-intelligence-layer.md  ai-intelligence-mode.md  ai-phase3.md  context-engine.md  engineering-agent-core.md  intent-driven-ai.md  phase1-rootcause.md  phase2-evidence.md  phase2-maturity-repair.md  titanx-bot-cleanup.md  titanx-panel.md  titanx-password.md  titanx-replit-manager.md  vision-foundation.md
.github/workflows/: sync.yml
backup_20260616_222820/: bot.py  requirements.txt  setup.py
backup_20260616_222820/admin_bot/: bot.py  locales.py
backup_20260616_222820/config/: settings.py
backup_20260616_222820/database/: achievements.py  activity.py  cache.py  db.py  downloads.py  referrals.py  reports.py
backup_20260616_222820/handlers/: admin.py  download.py  profile.py  start.py
backup_20260616_222820/locales/: __init__.py  ar.py  en.py
backup_20260616_222820/middlewares/: auth.py  subscription_gate.py
backup_20260616_222820/services/: downloader.py  subscription.py
backup_20260616_222820/support_bot/: bot.py
backup_20260616_222820/utils/: helpers.py
backup_20260616_222820/workers/: cleanup.py  heartbeat.py
extracted_project/: .env.example  .gitignore  .panel_settings.json  Dockerfile  MIGRATION.md  bot.py  requirements.txt
extracted_project/admin_bot/: bot.py  locales.py
hf_space/: Dockerfile  README.md  app.py
scripts/: deploy.sh  start.sh
(+126 files in other folders)
