[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.14.1",
    "cachetools>=7.1.4",
    "fastapi>=0.137.1",
    "gitpython>=3.1.50",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pydantic>=2.0",
    "pydantic-core>=2.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "python-telegram-bot==21.6",
    "typing-extensions>=4.14",
    "uvicorn[standard]>=0.49.0",
    "yt-dlp>=2026.6.9",
]
